[package]
name = "geyser-kafka-delta"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Geyser plugin interface
solana-geyser-plugin-interface = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"
solana-account-decoder = "1.18"

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build", "ssl-vendored", "tokio"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
prost = "0.13"

# Utils
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
dashmap = "6.0"

# Performance
crossbeam-channel = "0.5"
parking_lot = "0.12"

[build-dependencies]
prost-build = "0.13"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3