[package]
name = "backend-mev"
version = "1.0.0"
edition = "2021"
authors = ["MEV Elite Team"]

[dependencies]
# Core async runtime
tokio = { version = "1.40", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }

# QUIC implementation
quinn = "0.11"
quinn-proto = "0.11"
quinn-udp = "0.5"

# Lock-free data structures
crossbeam = { version = "0.8", features = ["crossbeam-channel", "crossbeam-queue"] }
dashmap = "6.0"
parking_lot = "0.12"
arc-swap = "1.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
borsh = "1.5"

# Solana SDK
solana-sdk = "1.18"
solana-client = "1.18"
solana-transaction-status = "1.18"
solana-rpc-client = "1.18"
solana-streamer = "1.18"

# Jito integration
jito-protos = { version = "0.1", features = ["convert"] }
jito-searcher-client = "0.1"

# Performance & metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = { version = "0.13", features = ["process"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"

# Networking
socket2 = { version = "0.5", features = ["all"] }
io-uring = "0.6"
libc = "0.2"
nix = { version = "0.29", features = ["net", "socket", "time"] }

# SIMD & optimization
packed_simd_2 = "0.3"
arrayref = "0.3"
smallvec = { version = "1.13", features = ["union", "const_generics"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Configuration
config = "0.14"
toml = "0.8"

# Testing & benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"

[dev-dependencies]
tempfile = "3.10"
test-case = "3.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
debug = false
overflow-checks = false

[profile.bench]
inherits = "release"

[[bench]]
name = "submission_latency"
harness = false

[[bench]]
name = "packet_processing"
harness = false

[features]
default = ["jemalloc"]
jemalloc = ["tikv-jemallocator"]
mimalloc = ["mimalloc-sys"]

[dependencies.tikv-jemallocator]
version = "0.6"
optional = true

[dependencies.mimalloc-sys]
version = "0.1"
optional = true